--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,7 +1,7 @@
 version: '3'
 services:
   lakefs:
-    image: "treeverse/lakefs:${VERSION:-latest}"
+    image: dalongrong/lakefs:dev-2022-02-09
     ports:
       - "8000:8000"
     depends_on:
@@ -9,28 +9,45 @@ services:
     environment:
       - LAKEFS_AUTH_ENCRYPT_SECRET_KEY=${LAKEFS_AUTH_ENCRYPT_SECRET_KEY:-some random secret string}
       - LAKEFS_DATABASE_CONNECTION_STRING=${LAKEFS_DATABASE_CONNECTION_STRING:-postgres://lakefs:lakefs@postgres/postgres?sslmode=disable}
-      - LAKEFS_BLOCKSTORE_TYPE=${LAKEFS_BLOCKSTORE_TYPE:-local}
+      - LAKEFS_BLOCKSTORE_TYPE=${LAKEFS_BLOCKSTORE_TYPE:-s3}
       - LAKEFS_BLOCKSTORE_LOCAL_PATH=${LAKEFS_BLOCKSTORE_LOCAL_PATH:-/home/lakefs}
       - LAKEFS_GATEWAYS_S3_DOMAIN_NAME=${LAKEFS_GATEWAYS_S3_DOMAIN_NAME:-s3.local.lakefs.io:8000}
-      - LAKEFS_BLOCKSTORE_S3_CREDENTIALS_ACCESS_KEY_ID=${AWS_ACCESS_KEY_ID:-}
-      - LAKEFS_BLOCKSTORE_S3_CREDENTIALS_ACCESS_SECRET_KEY=${AWS_SECRET_ACCESS_KEY:-}
+      - LAKEFS_BLOCKSTORE_S3_CREDENTIALS_ACCESS_KEY_ID=${AWS_ACCESS_KEY_ID:-minio}
+      - LAKEFS_BLOCKSTORE_S3_CREDENTIALS_ACCESS_SECRET_KEY=${AWS_SECRET_ACCESS_KEY:-minio123}
       - LAKEFS_LOGGING_LEVEL=${LAKEFS_LOGGING_LEVEL:-INFO}
       - LAKEFS_STATS_ENABLED
-      - LAKEFS_BLOCKSTORE_S3_ENDPOINT
-      - LAKEFS_BLOCKSTORE_S3_FORCE_PATH_STYLE
+      - LAKEFS_BLOCKSTORE_S3_ENDPOINT=http://s3:9000
+      - LAKEFS_BLOCKSTORE_S3_FORCE_PATH_STYLE=true
       - LAKEFS_COMMITTED_LOCAL_CACHE_DIR=${LAKEFS_COMMITTED_LOCAL_CACHE_DIR:-/home/lakefs/.local_tier}
-    entrypoint: ["/app/wait-for", "postgres:5432", "--", "/app/lakefs", "run"]
+    entrypoint:
+      [
+        "/app/wait-for",
+        "postgres:5432",
+        "--",
+        "/app/lakefs",
+        "run"
+      ]
   postgres:
     image: "postgres:${PG_VERSION:-11}"
     command: "-c log_min_messages=FATAL"
+    ports:
+      - "5432:5432"
     environment:
       POSTGRES_USER: lakefs
       POSTGRES_PASSWORD: lakefs
     logging:
       driver: none
   dremio:
-    image: dremio/dremio-oss:20.1.0
+    build: ./
     ports:
-    - "9047:9047"
-    - "31010:31010"
-    
+      - "9047:9047"
+      - "31010:31010"
+  s3:
+    image: minio/minio
+    environment:
+      - "MINIO_ACCESS_KEY=minio"
+      - "MINIO_SECRET_KEY=minio123"
+    command: server /data --console-address ":9001"
+    ports:
+      - "9000:9000"
+      - "9001:9001"
